[package]
name = "okkhor"
version = "0.7.0"
authors = ["Gulshanur Rahman<gulshanur@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/gulshan/okkhor/"
license = "MIT"
description = "A Rust library for English to Bangla phonetic conversion following the 'Avro' rules"

[features]
editor = []
regex = []
khipro = []
rupantor_bench = []

[lib]
bench = false

[dev-dependencies]
criterion = "0.5"
rupantor = "0.3"

[[bench]]
name = "benching"
harness = false
