[package]
name = "okkhor"
version = "0.8.1"
authors = ["Gulshanur Rahman<gulshanur@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/gulshan/okkhor/"
license = "MIT"
description = "A Rust library for English to Bangla phonetic conversion implementing the 'Avro' rules"

[features]
editor = []
regex = []
khipro = []
rupantor_bench = []

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.7", default-features = false }
rupantor = "0.3"

[[bench]]
name = "benching"
harness = false
